# moodiary

./: .gitattributes  .gitignore  .metadata  CHANGELOG.md  README.en.md  README.md  README.zh.md  analysis_options.yaml  build.yaml  cliff.toml  flutter_rust_bridge.yaml  l10n.yaml  pubspec.yaml
.github/: release-drafter.yml
.github/ISSUE_TEMPLATE/: 🐛-异常报告---bug-report.md  💡新功能请求---feature-request.md
.github/workflows/: auto-merge.yml  build.yml  cargo-ci.yml  cliff-dev.yml  cliff.yml  flutter-analyze.yml  flutter-ci.yml  issue.yml  label-pr.yml  main.yml  telegram-bot.yml
android/: .gitignore  build.gradle  settings.gradle
android/app/: build.gradle  proguard-rules.pro
assets/lottie/: file_process.json  file_search.json  loading_cat.json  loading_material.json  ok.json
ios/: Podfile
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/api/: api.dart
lib/config/: env.dart
lib/l10n/: app_localizations.dart  app_localizations_en.dart  app_localizations_zh.dart  intl_en.arb  intl_zh.arb  l10n.dart
lib/merge/: merge.dart
lib/persistence/: hive.dart  isar.dart  pref.dart  secure_storage.dart  supabase.dart
lib/presentation/: isar.dart  pref.dart  secure_storage.dart  supabase.dart
lib/router/: app_pages.dart  app_routes.dart
lib/utils/: aes_util.dart  array_util.dart  auth_util.dart  cache_util.dart  channel.dart  file_util.dart  font_util.dart  (+23 more)
lottie/: file_ok.json
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: aes.rs  argon2.rs  compress.rs  constants.rs  font.rs  jieba.rs  kmp.rs  mod.rs  zip.rs
rust/src/test/: aes_test.rs  argon2_test.rs  kmp_test.rs  mod.rs
rust_builder/: pubspec.yaml
server/: build.gradle.kts  gradle.properties
test/: lru_test.dart  task_scheduler_test.dart
tflite/: model_quant.tflite
windows/: CMakeLists.txt
(+371 files in other folders)
