[package]
name = "moodiary_rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.8.0"
image = "0.25.5"
fast_image_resize = { version = "5.1.1", features = ["image"] }
anyhow = "1.0.95"
bytemuck = "1.21.0"
ttf-parser = {git = "https://github.com/inferiorhumanorgans/ttf-parser.git", branch = "fvar-instance"}
ring = "0.17.8"
