[package]
name = "moodiary_rust"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.9.0"
image = "0.25.5"
fast_image_resize = { version = "5.1.2", features = ["image"] }
anyhow = "1.0.97"
ttf-parser = { git = "https://github.com/ZhuJHua/ttf-parser", branch = "fvar" }
ring = "0.17.14"
zip = "2.4.2"
walkdir = "2.5.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"