[package]
name = "moodiary_rust"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.9.0"
image = "0.25.6"
fast_image_resize = { version = "5.1.3", features = ["image"] }
anyhow = "1.0.98"
ttf-parser = { git = "https://github.com/ZhuJHua/ttf-parser", branch = "fvar" }
ring = "0.17.14"
zip = "2.6.1"
walkdir = "2.5.0"
jieba-rs = { version = "0.7.2", features = ["default-dict", "tfidf", "textrank"] }
once_cell = "1.21.3"
tokio = "1.44.2"
argon2 = { version = "0.6.0-pre.1", features = ["std", "default"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"